@@ -8,8 +8,11 @@ import com.example.yoga_app.repository.BookingRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import com.example.yoga_app.dto.BookingDto;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +34,22 @@ public class BookingService {
                             s.getRoom(),
                             s.getDuration()
                     );
-                }).toList();
+                }).collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<BookingDto> getBookingsByTeacherId(UUID teacherId) {
+        // Filtrujemy rezerwacje na podstawie nauczyciela
+        List<Booking> bookings = bookingRepository.findAll().stream()
+                .filter(booking -> booking.getSchedule().getInstructor().getId().equals(teacherId))
+                .collect(Collectors.toList());
+
+        return bookings.stream()
+                .map(booking -> new BookingDto(
+                        booking.getUser().getId(),
+                        booking.getSchedule().getId(),
+                        booking.getStatus() // Możesz dodać więcej informacji w DTO
+                ))
+                .collect(Collectors.toList());
     }
 }
